--- a/public_html/index.html
+++ b/public_html/index.html
@@ -46,7 +46,8 @@
         padding-left:40px;
       }
     </style>
-
+    <script src="lib/ionic/js/angular/angular-websql.min.js"></script>
+    <script src="lib/ionic/js/angular/ngStorage.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/routes.js"></script>
