--- a/public_html/index.html
+++ b/public_html/index.html
@@ -49,6 +49,7 @@
     </style>
     <script src="lib/ionic/js/angular/angular-websql.min.js"></script>
     <script src="lib/ionic/js/angular/ngStorage.min.js"></script>
+    <script src="lib/moment/moment.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/routes.js"></script>
